service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fastapi-app
spec:
  type: LoadBalancer
  selector:
    app: fastapi-app
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
